# setupCase-boilerplate

./: .ci_status.json  .gitattributes  .gitignore  1-Install-Cake.php  1-setup-WSL.sh  1cake.php  2-Install-CodeBlocks.php  2-Install-CodeBlocks_bootstrap.php  2-Install-CodeBlocks_layout.php  2-Install-CodeBlocks_routes.php  2-install-CodeBlocks-MANUAL-STEPS.md  2installCodeBlocks.php  3-View-CodeBlocks.php  3buildBootstrapLayout.php  4-setup-new-localApp.sh  5createNewProject.php  8-Save-CodeBlocks.php  8saveCodeBlocks.php  AGENTS.md  INSTALLATION-V2.md  INSTALLATION-V4.md  INSTRUCTIONS.md  LAUNCH-GUIDE.md  LICENSE  PROGRAMMING-GUIDE.md  QUICK-START-V2.md  QUICK-START-V4.md  README.md  Storage.md  install-setupCase.sh  package-lock.json  setupCase-cakePHP4x-init.sh  setupCase-github-CREATENEW.sh  setupCase-zRESET.sh
DockerStage/: 5restartApache.sh  8cleanup.sh
LaunchPad/: 2_setupStagingServer.sh
codeBlocks/: README.md
deploy/: run.php
deploy-init/: init.php  setup-server.bat
development/: 2loginDockerContainer.bat  4startVsCodeWeb.bat  5enterLinuxGui.bat  Dockerfile  docker-compose.yml
docker/: 1reStartDocker.sh  1startDocker.sh  2loginDockerContainer.bat  6saveDbWindows.sh  9deleteAllData.bat  README.md  TODO.md  docker-compose.yml
dockerCOPYINTO/: 1startDocker.bat  2loginDockerContainer.bat  8rebuild-clean.bat  README.md
dockerDEV/: 2loginDockerContainer.bat  docker-compose.yml
dockerIDE/: 1reStartAndReBuildDocker.bat  README.md  (+3 more)
template_localApp/runtime/python/: README.md  pyproject.toml
template_localApp/runtime/python/app/: main.py  version.py
(+506 files in other folders)
