[tool.poetry]
name = "localapp"
version = "0.1.0"
description = "SetupCase local application runtime"
authors = ["undoLogic <dev@undologic.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
